--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "homepage": "https://github.com/pauloavelar/slack-commands#readme",
   "dependencies": {
     "@slack/bolt": "^2.0.0",
+    "node-fetch": "^2.6.0",
     "qs": "^6.9.3"
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.5.6",
+    "aws-sdk": "^2.658.0"
   }
 }
